[gd_scene load_steps=9 format=3 uid="uid://dw24yvds8amvd"]

[ext_resource type="Script" path="res://Assets/Port v2/passion_port_5.gd" id="1_iul2h"]
[ext_resource type="Texture2D" uid="uid://ss5gna53amsi" path="res://Assets/Opdelt porte/tapioka_port_h.png" id="2_ppefm"]
[ext_resource type="Texture2D" uid="uid://bbhdk8a2mrr54" path="res://Assets/Opdelt porte/tapioka_port_v.png" id="3_mqhlr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_frp03"]
size = Vector2(67, 20)

[sub_resource type="Animation" id="Animation_1876e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("passion_h_5:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("passion_v_5:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, 0)]
}

[sub_resource type="Animation" id="Animation_50aks"]
resource_name = "passion_port_close_5"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("passion_h_5:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, 0), Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("passion_v_5:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-33, 0), Vector2(-13, 0)]
}

[sub_resource type="Animation" id="Animation_jdqnv"]
resource_name = "passion_port_open_5"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("passion_h_5:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 0), Vector2(33, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("passion_v_5:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, 0), Vector2(-33, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qm4yf"]
_data = {
"RESET": SubResource("Animation_1876e"),
"passion_port_close_5": SubResource("Animation_50aks"),
"passion_port_open_5": SubResource("Animation_jdqnv")
}

[node name="passion_port_5" type="StaticBody2D"]
script = ExtResource("1_iul2h")

[node name="passion_h_5" type="Sprite2D" parent="."]
position = Vector2(17, 0)
texture = ExtResource("2_ppefm")

[node name="passion_v_5" type="Sprite2D" parent="."]
position = Vector2(-13, 0)
texture = ExtResource("3_mqhlr")

[node name="passion_port_collision_5" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_frp03")

[node name="ap_passion_5" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qm4yf")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="close_port"]
